tests/fixtures/validate/strict/invalid/strict-invalid-top-level-member-1.yini
title = "My App"   // ERROR: top-level member is not allowed in strict mode

^ App
enabled = true

/END
